--- a/ARSHA-master/testportfolio/FstoreTemplate.html
+++ b/ARSHA-master/testportfolio/FstoreTemplate.html
@@ -9,104 +9,263 @@
 
     <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
     <title>FashioStore Template</title>
+
+    <style>
+             /* 30may/01:20 */
+
+        /* brand-carousel */
+
+        .brandcarousel-container {
+            background-color: #f5f6f8;
+            overflow: hidden;
+            padding: 0;
+            height: 2.5rem;
+            background-color: #8c0d4f;
+        }
+
+        .brandcarousel-track {
+            justify-content: center;
+            align-items: center;
+            justify-items: center;
+            display: flex;
+            animation: slide 10s infinite linear;
+            gap: 5rem;
+            font-size: 24px;
+            color: white;
+            margin-bottom: 1rem;
+
+        }
+
+        .brandcarousel-track img {
+            height: 38px;
+            transition: all 0.1s ease-in-out;
+        }
+
+        .brandcarousel-track img:hover {
+            transform: scale(1.05);
+            cursor: pointer;
+        }
+
+        .brandcarousel-container:hover .brandcarousel-track {
+            animation-play-state: paused;
+        }
+
+        @keyframes slide {
+            0% {
+                transform: translateY(0);
+            }
+
+            100% {
+                transform: translateY(-50%);
+            }
+        }
+
+        .brand-wrapper {
+            overflow: hidden;
+            cursor: pointer;
+            /* pause on hover */
+        }
+    </style>
 </head>
 
 <body>
-    <header>
+    <!-- topnavHeading -->
+    <nav class="navbar navbar-light bg-light">
+        <div class="container-fluid">
+            <div class="container">
+                <div class="row">
+                    <!-- start -->
+                    <div class="col-6 ">
+                        <div class="contactheader d-flex">
+                            <i class='bx bxs-phone bx-sm pt-2 p-2'></i>
+                            <p class="navbar-brand mb-0 h1 fw-normal">Customer Support: <span style="color: #8c0d4f;">+1
+                                    (234) 567-890</span></p>
 
-
-        <!-- topnavHeading -->
-        <nav class="navbar navbar-light bg-light">
-            <div class="container-fluid">
-                <div class="container">
-                    <div class="row">
-                        <!-- start -->
-                        <div class="col-6 ">
-                            <div class="contactheader d-flex">
-                                <i class='bx bxs-phone bx-sm pt-2 p-2'></i>
-                                <p class="navbar-brand mb-0 h1 fw-normal">Customer Support: <span
-                                        style="color: #8c0d4f;">+1
-                                        (234) 567-890</span></p>
-
-                                <div class="mailheader d-flex">
-                                    <i class='bx bx-envelope bx-sm pt-2 p-2'></i>
-                                    <p class="navbar-brand mb-0 h1 fw-normal" style="color: #8c0d4f;">
-                                        support@example.com</span></p>
-                                </div>
+                            <div class="mailheader d-flex">
+                                <i class='bx bx-envelope bx-sm pt-2 p-2'></i>
+                                <p class="navbar-brand mb-0 h1 fw-normal" style="color: #8c0d4f;">
+                                    support@example.com</span></p>
                             </div>
-
-
-                        </div>
-                        <!-- end -->
-                        <div class="col-6 ">
-                            <div class="trackheader d-flex">
-                                <i class='bx bxs-truck bx-sm pt-1 p-2'></i>
-                                <p class="navbar-brand mb-0 h1 fw-normal" style="color: #8c0d4f;"> Track Order</p>
-                                <div class="languageheader d-flex">
-                                    <i class='bx bx-comment-dots bx-sm pt-2 p-2'></i>
-                                    <p class="navbar-brand mb-0 h1 fw-normal" style="color: #8c0d4f;">English</p>
-                                    <!-- creat drop -->
-
-                                </div>
-
-                                <div class="trackheader d-flex">
-                                    <div class="languageheader d-flex">
-                                        <i class='bx bx-dollar bx-sm pt-2 p-2'></i>
-                                        <p class="navbar-brand mb-0 h1 fw-normal" style="color: #8c0d4f;">USD</p>
-                                        <!-- creat drop -->
-
-                                    </div>
-                                </div>
-                            </div>
-
-
-
-
                         </div>
 
 
                     </div>
+                    <!-- end -->
+                    <div class="col-6 ">
+                        <div class="trackheader d-flex">
+                            <i class='bx bxs-truck bx-sm pt-1 p-2'></i>
+                            <p class="navbar-brand mb-0 h1 fw-normal" style="color: #8c0d4f;"> Track Order</p>
+                            <div class="languageheader d-flex">
+                                <i class='bx bx-comment-dots bx-sm pt-2 p-2'></i>
+                                <p class="navbar-brand mb-0 h1 fw-normal" style="color: #8c0d4f;">English</p>
+                                <!-- creat drop -->
+
+                            </div>
+
+                            <div class="trackheader d-flex">
+                                <div class="languageheader d-flex">
+                                    <i class='bx bx-dollar bx-sm pt-2 p-2'></i>
+                                    <p class="navbar-brand mb-0 h1 fw-normal" style="color: #8c0d4f;">USD</p>
+                                    <!-- creat drop -->
+
+                                </div>
+                            </div>
+                        </div>
+
+
+
+
+                    </div>
+
+
                 </div>
             </div>
+        </div>
 
-        </nav>
+    </nav>
 
-        <!-- NAVBAR -->
-        <nav class="navbar navbar-light bg-light">
-            <div class="container-fluid">
-                <div class="container">
-                    <div class="row">
-                        <div class="col-6">
-                            <a class="navbar-brand fw-bolder gap-0 m-0 p-0">
-                                <h1>Fashion <span style="color: #8c0d4f;">Store</span> </h1>
-                            </a>
-                            
-                        </div>
-                        <div class="col-6">
-                            <form class="d-flex">
-                                <i class='bx bx-search bx-md' ></i>
+    <!-- STORE NAVBAR -->
+    <nav class="navbar navbar-light bg-white pb-0">
+        <div class="container-fluid w-100">
+            <div class="container w-100">
+                <div class="row ">
+                    <div class="col-6">
+                        <a class="navbar-brand fw-bolder gap-0 m-0 p-0">
+                            <h1>Fashion <span style="color: #8c0d4f;">Store</span> </h1>
+                        </a>
+
+                    </div>
+                    <div class="col-6">
+                        <div class="search-container d-flex">
+
+                            <form class="px-4">
+                                <i class='bx bx-search bx-md'></i>
                                 <!-- when clicked box opens below vertical scroll -->
                                 <!-- <input class="form-control me-2 " type="search" placeholder="Search" aria-label="Search"> -->
                                 <!-- <button class="btn btn-outline-success" type="submit">Search</button> -->
                             </form>
 
                             <!-- account -->
-                            <a class="navbar-brand fw-bolder gap-0 m-0 p-0">
-                                <i class='bx bx-user' ></i>
+                            <a class="navbar-brand fw-bolder px-4 gap-1 m-0 p-0 d-flex">
+                                <i class='bx bx-user bx-md'></i>
                                 <p>Account</p>
+                            </a>
+
+                            <a class="navbar-brand fw-bolder px-4  m-0 p-0 d-flex">
+                                <i class='bx bx-heart bx-md'></i>
+                                <p>wishlist</p>
+
+                                <!-- round number on top right -->
+                            </a>
+
+                            <a class="navbar-brand fw-bolder px-4 m-0 p-0 d-flex">
+                                <i class='bx bx-cart-alt bx-md'></i>
+                                <p>cart</p>
+
+                                <!-- round number on top right -->
+                            </a>
+
+                            <a class="navbar-brand fw-bolder px-4 m-0 p-0 d-flex">
+                                <i class='bx bx-menu bx-md'></i>
+
+
+                                <!-- drop menu on hover -->
                             </a>
                         </div>
                     </div>
                 </div>
+                <hr class="w-100">
             </div>
-        </nav>
+        </div>
+    </nav>
 
+    <!-- Sales scroll -->
+    <!-- Brand carousel -->
+    <div class="brandcarousel-container">
+        <div class="brand-wrapper">
+            <div class="brandcarousel-track ">
+                <!-- First set of logos -->
+                <div class="vertical ">
+                    <p><i class='bx bx-gift' style='color:#e5ff00'></i>Flash Sale Upto 70% off on selected items</p>
+                    <p><i class='bx bxs-truck bx-sm' style='color:#e5ff00'></i>free shipping on oders over $50</p>
+                    <p> <i class='bx bx-money-withdraw bx-sm' style=' color:#e5ff00'></i>30 Day Money Back Guarantee</p>
+                    <p><i class='bx bx-credit-card bx-sm' style='color:#e5ff00'></i>20% off on your first order use
+                        code- 20 OFF</p>
+                </div>
 
-    </header>
+                <!--  logo Repeat-->
+                <!-- <div class="vertical ">
+                    <p><i class='bx bx-gift' style='color:#e5ff00'></i>Flash Sale Upto 70% off on selected items</p>
+                    <p><i class='bx bxs-truck bx-sm' style='color:#e5ff00'></i>free shipping on oders over $50</p>
+                    <p> <i class='bx bx-money-withdraw bx-sm' style=' color:#e5ff00'></i>30 Day Money Back Guarantee</p>
+                    <p><i class='bx bx-credit-card bx-sm' style='color:#e5ff00'></i>20% off on your first order use
+                        code- 20 OFF</p>
+                </div> -->
 
+            </div>
+        </div>
+    </div>
 
+    <!-- herosection -->
+    <section class="mainhero-container">
+        <div class="container-fluid">
+            <div class="container">
+                <div id="carouselExampleControls" class="carousel slide" data-bs-ride="carousel">
+                    <div class="carousel-inner">
+                        <div class="carousel-item active">
+                            <img src="shoe.webp" class="d-block w-25" alt="shoe">
+                        </div>
+                        <div class="carousel-item">
+                            <img src="bag.webp" class="d-block w-25" alt="...">
+                        </div>
+                        <div class="carousel-item">
+                            <img src="backpack.webp" class="d-block w-25" alt="...">
+                        </div>
+                    </div>
+                    <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleControls"
+                        data-bs-slide="prev">
+                        <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                        <span class="visually-hidden">Previous</span>
+                    </button>
+                    <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleControls"
+                        data-bs-slide="next">
+                        <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                        <span class="visually-hidden">Next</span>
+                    </button>
+                </div>
+            </div>
+        </div>
+    </section>
 
+    <!-- shoping cards -->
 
+    <section>
+        <div class="container-fluid">
+            <div class="container">
+                <div class="row position-relative">
+                    <div class="col-4">
+                        <div class="card  "
+                            style="width: 18rem;height: 32rem; border-radius: 10px; background-color: #f5f2ee; z-index: -1;">
+                            <div class="card-body p-4 pt-5 px-4 py-4  " style="">
+                                <h5 class="card-title text-muted">Etiam vel augue</h5>
+                                <h6 class="card-text" style="font-size: 22px;">Nullam quis ante</h6>
+                                <h3 class="card-subtitle mb-2 text-muted ">Donec pede justo, fringilla vel, aliquet nec, vulputate
+                                    eget, arcu in enim justo rhoncus ut.</h3>
+
+                                    <a href="#" class="card-link fw-bolder" style="color: #8c0d4f; font-size: 24px;  ">Shop
+                                        Now</a>
+
+                                <img src="bag.webp" alt="shoping bag" width="50%" height="50%"
+                                    style=" position: absolute;z-index: 2; top: 20rem; bottom: 12rem;  justify-content: end; align-items: end; left: 9.5rem; margin-bottom: 0%;">
+                                
+
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
 
     <script src="https://unpkg.com/boxicons@2.1.4/dist/boxicons.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
