--- a/ARSHA-master/testportfolio/dontsave.html
+++ b/ARSHA-master/testportfolio/dontsave.html
@@ -1,153 +1,93 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
-    <meta charset="UTF-8">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
-        integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
-
-    <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
-    <title>Simple Donut Chart</title>
-    <style>
-         /* brand-carousel */
-
-        .brandcarousel-container {
-            background-color: #f5f6f8;
-            overflow: hidden;
-            padding: 0;
-            height: 3rem;
-            background-color: #8c0d4f;
-            flex-direction: column;
-        }
-
-        .brandcarousel-track {
-            justify-content: center;
-            align-items: center;
-            justify-items: center;
-            display: flex;
-            /* animation: slide 20s steps(4) ; */
-            animation: stepScroll 3s steps(4) infinite;
-            gap: 5rem;
-            font-size: 24px;
-            color: white;
-            margin-bottom: 1rem;
-            overflow: hidden;
-        }
-
-        .brandcarousel-track .vertical {
-            margin: 0;
-            padding: 0;
-        }
-
-        .brandcarousel-track p {
-            margin: 0;
-            padding: 0.3rem 0;
-            height: 3rem;
-            line-height: 3rem;
-            font-size: 18px;
-            }
-
-
-        .brandcarousel-track img {
-            height: 38px;
-            transition: all 0.1s ease-in-out;
-        }
-
-        .brandcarousel-track img:hover {
-            transform: scale(1.05);
-            cursor: pointer;
-        }
-
-        .brandcarousel-container:hover .brandcarousel-track {
-            animation-play-state: paused;
-        }
-
-        @keyframes stepScroll {
-            0% {
-                transform: translateY(0);
-            }
-
-            100% {
-                transform: translateY(-160%);
-            }
-        }
-
-        .brand-wrapper {
-            overflow: hidden;
-            cursor: pointer;
-            /* pause on hover */
-        }
-    </style>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <title>JS Events Demo</title>
+  <style>
+    body {
+      font-family: sans-serif;
+      padding: 2rem;
+      background-color: #f0f8ff;
+    }
+    .box {
+      margin-bottom: 1rem;
+    }
+    button, input, select {
+      font-size: 1rem;
+      padding: 0.5rem 1rem;
+      margin-top: 0.5rem;
+    }
+  </style>
 </head>
-
 <body>
 
-    <nav class="navbar navbar-expand-lg navbar-light bg-light">
-        <div class="container-fluid">
-          <a class="navbar-brand" href="#">Navbar</a>
-          <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
-          </button>
-          <div class="collapse navbar-collapse" id="navbarSupportedContent">
-            <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-              <li class="nav-item">
-                <a class="nav-link active" aria-current="page" href="#">Home</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="#">Link</a>
-              </li>
-              <li class="nav-item dropdown">
-                <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-                  Dropdown
-                </a>
-                <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-                  <li><a class="dropdown-item" href="#">Action</a></li>
-                  <li><a class="dropdown-item" href="#">Another action</a></li>
-                  <li><hr class="dropdown-divider"></li>
-                  <li><a class="dropdown-item" href="#">Something else here</a></li>
-                </ul>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link disabled" href="#" tabindex="-1" aria-disabled="true">Disabled</a>
-              </li>
-            </ul>
-            <form class="d-flex">
-              <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
-              <button class="btn btn-outline-success" type="submit">Search</button>
-            </form>
-          </div>
-        </div>
-      </nav>
+  <h2>Event Examples in JS</h2>
 
-     <!-- Brand carousel -->
-    <div class="brandcarousel-container">
-        <div class="brand-wrapper">
-            <div class="brandcarousel-track ">
-                <!-- First set of logos -->
-                <div class="vertical ">
-                    <p><i class='bx bx-gift' style='color:#e5ff00'></i>Flash Sale Upto 70% off on selected items</p>
-                    <p><i class='bx bxs-truck bx-sm' style='color:#e5ff00'></i>free shipping on oders over $50</p>
-                    <p> <i class='bx bx-money-withdraw bx-sm' style=' color:#e5ff00'></i>30 Day Money Back Guarantee</p>
-                    <p><i class='bx bx-credit-card bx-sm' style='color:#e5ff00'></i>20% off on your first order use
-                        code- 20 OFF</p>
-                    <!--  logo Repeat-->
+  <!-- CLICK -->
+  <div class="box">
+    <button id="clickBtn">Click Me</button>
+  </div>
 
-                    <p><i class='bx bx-gift' style='color:#e5ff00'></i>Flash Sale Upto 70% off on selected items</p>
-                    <p><i class='bx bxs-truck bx-sm' style='color:#e5ff00'></i>free shipping on oders over $50</p>
-                    <p> <i class='bx bx-money-withdraw bx-sm' style=' color:#e5ff00'></i>30 Day Money Back Guarantee</p>
-                    <p><i class='bx bx-credit-card bx-sm' style='color:#e5ff00'></i>20% off on your first order use
-                        code- 20 OFF</p>
-                </div>
+  <!-- MOUSEOVER + MOUSEOUT -->
+  <div class="box">
+    <button id="hoverBtn">Hover Over Me</button>
+  </div>
 
-            </div>
-        </div>
-    </div>
+  <!-- FOCUS + BLUR -->
+  <div class="box">
+    <input type="text" id="focusInput" placeholder="Click inside me">
+  </div>
 
+  <!-- CHANGE -->
+  <div class="box">
+    <select id="selectBox">
+      <option value="">-- Choose an option --</option>
+      <option value="Cat">Cat</option>
+      <option value="Dog">Dog</option>
+      <option value="Dragon">Dragon</option>
+    </select>
+  </div>
 
-     <script src="https://unpkg.com/boxicons@2.1.4/dist/boxicons.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
-        integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
-        crossorigin="anonymous"></script>
+  <script>
+    // CLICK
+    document.getElementById("clickBtn").onclick = function() {
+      this.style.backgroundColor = "salmon";
+      this.innerHTML = "Clicked!";
+    };
+
+    // MOUSEOVER
+    document.getElementById("hoverBtn").onmouseover = function() {
+      this.style.backgroundColor = "lightgreen";
+      this.innerText = "You're hovering!";
+    };
+
+    // MOUSEOUT
+    document.getElementById("hoverBtn").onmouseout = function() {
+      this.style.backgroundColor = "";
+      this.innerText = "Hover Over Me";
+    };
+
+    // FOCUS
+    document.getElementById("focusInput").onfocus = function() {
+      this.style.backgroundColor = "lightyellow";
+    };
+
+    // BLUR
+    document.getElementById("focusInput").onblur = function() {
+      this.style.backgroundColor = "white";
+    };
+
+    // CHANGE
+    document.getElementById("selectBox").onchange = function() {
+      alert("You selected: " + this.value);
+    };
+
+    // LOAD
+    window.onload = function() {
+      console.log("Page loaded successfully!");
+    };
+  </script>
+
 </body>
-
 </html>
