--- a/ARSHA-master/testportfolio/claculatorB.html
+++ b/ARSHA-master/testportfolio/claculatorB.html
@@ -45,6 +45,7 @@
         }
         #btn:hover{
             background-color: #454343;
+            color: white;
         }
     </style>
 </head>
