--- a/ARSHA-master/testportfolio/calculatorC.html
+++ b/ARSHA-master/testportfolio/calculatorC.html
@@ -82,11 +82,14 @@
 
     <script>
         <!--clear-->
+          let lastOperator = null
 
         function calculate() {
-            var number1 = Number(document.getElementById("number1").value);
-            var number2 = parseInt(document.getElementById("number2").value);
+            const number1 = Number(document.getElementById("number1").value);
+            const number2 = parseInt(document.getElementById("number2").value);
             var lastOperator=document.getElementById("operator").value;
+             
+             lastOperator = operator;
 
             if (lastOperator.length===0) {
                 result = "Select an operator";
